Fix misaligned signal tail

--- a/css/td.css
+++ b/css/td.css
@@ -63,6 +63,7 @@
 
 .td-signal-clk-wrapper {
     width: calc(var(--unit-width) * var(--cycle-width));
+    height: var(--cycle-height);
     display: inline-block;
     overflow: hidden;
 }
